messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django-messaging-container
          image: your-dockerhub-username/django-messaging-app:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging
spec:
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000       # Service port (internal cluster access)
      targetPort: 8000 # Container port
  type: ClusterIP
